--- a/templates/manager/template_new.html
+++ b/templates/manager/template_new.html
@@ -2,9 +2,8 @@
 <h1>New template</h1>
 <form action="{% url manager.views.template_create %}" method="post">
     {% csrf_token %}
-    <p>
-        <label for="newname">Name:</label>
-        <input type="text" name="newname" id="newname" />
-    </p>
+    <label for="newname">Name:</label>
+    <input type="text" name="newname" id="newname" value="" />
+    <input type="submit" name="sub" id="submit" value="Create" />
 </form>
 </body>
