--- a/templates/manager/node_list.html
+++ b/templates/manager/node_list.html
@@ -1,5 +1,6 @@
 <html><head></head><body>
 <h1>Nodes list</h1>
+<p><a href="{% url manager.views.main %}">main page</a></p>
 <ul>
     {% for node in nodes %}
         <li>
