--- a/templates/manager/template_list.html
+++ b/templates/manager/template_list.html
@@ -1,5 +1,6 @@
 <html><head></head><body>
 <h1>Templates list</h1>
+<p><a href="{% url manager.views.main %}">main page</a></p>
 <p><a href="{% url manager.views.template_new %}">create new</a></p>
 <ul>
     {% for node in nodes %}
