--- a/templates/manager/main.html
+++ b/templates/manager/main.html
@@ -3,5 +3,6 @@
 <ul>
     <li><a href="{% url manager.views.template_list %}">template list</a></li>
     <li><a href="{% url manager.views.node_list %}">item list</a></li>
+    <li><a href="{% url manager.views.node_table %}">item report</a></li>
 </ul>
 </body>
