Added templating engine based on Twitter Bootstrap

--- a/templates/manager/main.html
+++ b/templates/manager/main.html
@@ -1,8 +1,10 @@
-<html><head></head><body>
-<h1>Syrup object manager</h1>
+{% extends "base.html" %}
+
+{% block header %}Syrup object manager{% endblock %}
+{% block content %}
 <ul>
     <li><a href="{% url manager.views.template_list %}">template list</a></li>
     <li><a href="{% url manager.views.node_list %}">item list</a></li>
     <li><a href="{% url manager.views.node_table %}">item report</a></li>
 </ul>
-</body>
+{% endblock %}
