--- a/templates/manager/template_detail.html
+++ b/templates/manager/template_detail.html
@@ -1,5 +1,7 @@
-<html><head></head><body>
-<h1>{{ node }} detail</h1>
+{% extends "base.html" %}
+
+{% block header %}node:{{ node }}{% endblock %}
+{% block content %}
 <p><a href="{% url manager.views.template_list %}">templates list</a></p>
 <p>History:
 {% for n in node_history.get_nodes %}
@@ -41,4 +43,4 @@
     <li><a href="{% url manager.views.node_detail il.node.id %}">{{il.node}}</a></li>
 {% endfor %}
 </ul>
-</body>
+{% endblock %}
