Some simple styling ... we are on a roll! :)

--- a/templates/manager/main.html
+++ b/templates/manager/main.html
@@ -2,7 +2,7 @@
 
 {% block header %}Syrup object manager{% endblock %}
 {% block content %}
-<ul>
+<ul class="nav nav-list">
     <li><a href="{% url manager.views.template_list %}">template list</a></li>
     <li><a href="{% url manager.views.node_list %}">item list</a></li>
     <li><a href="{% url manager.views.node_table %}">item report</a></li>
