--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
+    <link href="{% static "bootstrap/css/bootstrap.css" %}" rel="stylesheet">
   </head>
   <body>
     <div class="container">
     <h1>{% block header %}{% endblock %}</h1>
     </div>
     <div class="container">
+      <p><a href="{% url manager.views.main %}"><i class="icon-home"></i></a></p>
       {% block content %}{% endblock %}
     </div>
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
