--- a/templates/manager/template_detail.html
+++ b/templates/manager/template_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block header %}node:{{ node }}{% endblock %}
+{% block header %}{{ node }}{% endblock %}
 {% block content %}
 <p><a href="{% url manager.views.template_list %}">templates list</a></p>
 <p>History:
@@ -14,28 +14,28 @@
     {% if not forloop.last %} &gt; {% endif %}
 {% endfor %}
 </p>
-<p><a href="{% url manager.views.node_new template_id=node.id %}">create item from this template</a></p>
-<h2>parameters</h2>
+<p><a href="{% url manager.views.node_new template_id=node.id %}" class="btn btn-success">create node using this template</a></p>
+<h2>manage template's parameters</h2>
 <form action="{% url manager.views.template_add_param %}" method="post">
     {% csrf_token %}
     <ul>
         {% for param in params %}
             <li>
-                {{ param }} <a href="{% url manager.views.node_del_param param.id %}"
-                    title="delete parameter">[X]</a>
+                {{ param }} <a href="{% url manager.views.node_del_param param.id %}" title="delete parameter">[X]</a>
             </li>
         {% empty %}
             <li><i>No parameters found.</i></li>
         {% endfor %}
     </ul>
     <input type="hidden" name="template_id" value="{{ node.id }}" />
-    <label for="param_name">name:</label>
+    <label for="param_name">parameter name:</label>
     <input type="text" name="param_name" id="param_name" value="" />
-    <label for="param_value">value:</label>
+    <label for="param_value">default value:</label>
     <input type="text" name="param_value" id="param_value" value="" />
-    <input type="checkbox" name="param_primary" id="param_primary" value="x" />
-    <label for="param_primary">primary</label>
-    <input type="submit" name="sub" id="submit" value="Add" />
+    <label for="param_primary" class=checkbox>
+      <input type="checkbox" name="param_primary" id="param_primary" value="x" /> primary
+    </label>
+    <input class="btn" type="submit" name="sub" id="submit" value="Add this parameter" />
 </form>
 <h2>instances</h2>
 <ul>
