--- a/templates/manager/template_list.html
+++ b/templates/manager/template_list.html
@@ -2,8 +2,7 @@
 
 {% block header %}Templates list{% endblock %}
 {% block content %}
-<p><a href="{% url manager.views.main %}">main page</a></p>
-<p><a href="{% url manager.views.template_new %}">create new</a></p>
+<p><a href="{% url manager.views.template_new %}">create new template</a></p>
 <ul>
     {% for node in nodes %}
         <li>
