--- a/templates/manager/main.html
+++ b/templates/manager/main.html
@@ -6,5 +6,6 @@
     <li><a href="{% url manager.views.template_list %}">template list</a></li>
     <li><a href="{% url manager.views.node_list %}">item list</a></li>
     <li><a href="{% url manager.views.node_table %}">item report</a></li>
+    <li><a href="{% url manager.views.node_tree %}">item tree</a></li>
 </ul>
 {% endblock %}
