--- a/templates/manager/node_tree.html
+++ b/templates/manager/node_tree.html
@@ -3,6 +3,14 @@
 
 {% block header %}Node tree{% endblock %}
 {% block content %}
+<form class="form-inline" method="get" action="{% url manager.views.node_tree %}">
+    <select name="root_node_id" id="root_node_id">
+        {% for n in nodes %}
+        <option value="{{n.id}}">{{n}}</option>
+        {% endfor %}
+    </select>
+    <input class="btn" type="submit" name="sub" id="submit" value="Show" />
+</form>
 <div style="font-family: monospace">
 {{root_node}}<br />
 {% for indent,item in tree %}
